fix(header): use home icon on small screens

--- a/styles/index.css
+++ b/styles/index.css
@@ -27,3 +27,15 @@ td, th {
 #menu_summary::-webkit-details-marker {
   display: none;
 }
+
+@media (max-width: 350px) {
+  .not-small-screen {
+    display: none;
+  }
+}
+
+@media (min-width: 350px) {
+  .small-screen-only {
+    display: none;
+  }
+}
